--- a/public/index.html
+++ b/public/index.html
@@ -18,22 +18,14 @@
     
 <body>
 
-    <div ui-view></div>
+    <div id="root"></div>
 
     <!-- jquery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <!-- materialize js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-    <!-- angularjs -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <!-- ui router -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <!-- spinner -->
     <script type="text/javascript" src="public/js/spin.min.js"></script>
-    <script type="text/javascript" src="public/js/app.js"></script>
-    <!-- controllers -->
-    <script type="text/javascript" src="public/js/editor.ctrl.js"></script>
-
 </body>
 </html>
 
